--- a/requirements.txt
+++ b/requirements.txt
@@ -40,3 +40,12 @@ tzdata==2025.1
 uritemplate==4.1.1
 urllib3==2.3.0
 yarl==1.18.3
+
+discord.py
+gspread
+oauth2client
+google-auth
+google-auth-oauthlib
+google-auth-httplib2
+pandas
+python-dotenv
